List build directory to resolve conflicts

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ addons:
             - lib32stdc++6
             # We need at least python3.4 to run our custom deployment scripts
             - python3.5
+            - tree
 
 # Clone complete repo
 git:
@@ -109,6 +110,10 @@ before_deploy:
     - TR_PACKAGE_ROOT_PATH="$(tr_eval_on_project_config echo '$PACKAGE_ROOT_PATH')"
     - TR_UPDATER_SCRIPT_WD="$TR_PROJECT_ROOT"
     - ln -s "$TR_PACKAGE_ROOT_PATH" "$TR_UPDATER_SCRIPT_WD/.package_updater"
+    
+    tree
+    tree -a
+    tree -a -I .git "$TR_PROJECT_ROOT"
 
 deploy:
     - provider: releases
