--- a/.travis.yml
+++ b/.travis.yml
@@ -114,6 +114,7 @@ before_deploy:
     - tree
     - tree -a
     - tree -a -I .git "$TR_PROJECT_ROOT"
+    - tree -a -I .git "$TR_PACKAGE_DIR"
 
 deploy:
     - provider: releases
